2010-05-29  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-after-save-hook when svn:eol-style property is native
	* Change: internal command variable (fsvn-svn*-command-internal) make have absolute path.
	* Improvement: fix async process function
	* Improvement: MAKE-TARGETS -> MAKE-TARGETS.mk

2010-05-24  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: AutoCheck.sh

2010-05-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: Unsupport 1.4.x

	* Fix: remove obsoleted variable default-buffer-file-coding-system

	* Fix: fsvn-log-sibling path is broken. Destructive `sort'.

	* Fix: Accept 1.6.9-dev like svn version (svn --version --quiet)

	* Change: fsvn-browse-mode
	    show current directory status.

2010-05-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-make.el
	       Unable compile emacs current version.

2010-05-15  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Refactor: fsvn-find-logs-entry -> fsvn-logs-find-logentry
	* Refactor: fsvn-log-create-path-chain -> fsvn-logs-create-path-chain
	* Refactor: fsvn-log-chain-find -> fsvn-logs-chain-find
	* Refactor: fsvn-popup.el functions to fsvn-popup namespace.
	* Change: revoke fsvn-svk from fsvn.el.
	       That depends on user's choice.

	* Improvement: Make distributable only a fsvn.el

2010-05-11  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-browse-commit-path
	    subcommand args missing.

2010-05-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-log-sibling-save-this
	       Unable save revisioned url.

	* Refactor: fsvn-log-list-save -> fsvn-log-list-save-this

	* Improvement: fsvn-log-sibling-mode sort all by path name.

	* Change: fsvn-browse-log-path -> fsvn-browse-logview-path

2010-05-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: svk support

2010-05-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Refactor: fsvn-browse-mode function name drastic change.